--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
                   </div>
 
-                  
+                  <div><a class="btn btn-primary" href="2015-08-25-neighbors_in_love.html">Read More</a></div>
               </div>
 
 
