Added Placeholder for Fullscreen Slider

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
                   </div>
 
-                  
+                  <div><a class="btn btn-primary" href="2015-08-22-night_shift_aint_that_bad.html">Read More</a></div>
               </div>
 
 
@@ -171,7 +171,7 @@
             <div class="row">
                 <div class="mbr-section col-md-10 col-md-offset-1 text-xs-center">
 
-                    <h1 class="mbr-section-title display-1">to infinity and beyond</h1>
+                    <h1 class="mbr-section-title display-1"><a href="banner.html" class="text-white">to infinity and beyond</a></h1>
                     <p class="mbr-section-lead lead"></p>
                     
                 </div>
@@ -185,7 +185,7 @@
 
 <section class="mbr-gallery mbr-section mbr-section--no-padding" id="soundcloud2-12">
     <!-- Gallery -->
-    <div class="mbr-section__container mbr-gallery-layout-article container mbr-section__container--isolated">
+    <div class="mbr-section__container mbr-gallery-layout-article container">
         <div class=" col-sm-8 col-sm-offset-2">
             <figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-outside-bottom">
                 <iframe class="mbr-embedded-video" frameborder="0" allowfullscreen="" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F274555680&amp;amp;auto_play=true&amp;amp;hide_related=false&amp;amp;show_comments=true&amp;amp;show_user=true&amp;amp;show_reposts=false&amp;amp;visual=true"></iframe>
